Noteworthy changes in version 1.18.1 (unreleased)
-------------------------------------------------

 * New context flag "no-auto-check-trustdb".  [T6261]

 * Optionally, build QGpgME for Qt 6

 * cpp: Handle error when trying to sign expired keys.  [T6155]

 * cpp, qt: Fix building with C++11.  [T6141]

 * qt: Fix problem with expiration dates after 2038-01-19 on 32-bit systems
   when adding an existing subkey to another key.  [T6137]

 * cpp: Allow setting the curve to use when generating ECC keys
   for smart cards.  [T4429]

 * qt: Extend ListAllKeysJob to allow disabling the automatic trust database
   check when listing all keys.  [T6261]

 * qt: Allow deferred start of import jobs.  [T6323]

 * Interface changes relative to the 1.18.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_get_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 gpgme_set_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 cpp: GpgGenCardKeyInteractor::Curve        NEW.
 cpp: GpgGenCardKeyInteractor::setCurve     NEW.
 qt: ListAllKeysJob::Option                 NEW.
 qt: ListAllKeysJob::Options                NEW.
 qt: ListAllKeysJob::setOptions             NEW.
 qt: ListAllKeysJob::options                NEW.
 qt: Job::startNow                          NEW.
 qt: ImportJob::startLater                  NEW.


Noteworthy changes in version 1.18.0 (2022-08-10)
-------------------------------------------------

 * New keylist mode to force refresh via external methods.  [T5951]

 * The keylist operations now create an import result to report the
   result of the locate keylist modes.  [T5951]

 * core: Return BAD_PASSPHRASE error code on symmetric decryption
   failure.  [T5939]

 * cpp, qt: Do not export internal symbols anymore.  [T5906]

 * cpp, qt: Support revocation of own OpenPGP keys.  [T5904]

 * qt: The file name of (signed and) encrypted data can now be set.  [T6056]
